<resources>
    <string name="app_name">TithingApp</string>
    <string name="action_settings">Settings</string>

    <!--Tabs-->
    <string name="tithing_tab_title">TITHING</string>
    <string name="income_tab_title">INCOME</string>

    <!--Views-->
    <string name="date_title">DATE:</string>
    <string name="amount_title">AMOUNT:</string>
    <string name="date_hint">DATE:</string>
    <string name="paid">PAID</string>
    <string name="title_hint">Title</string>
    <string name="amount_hint">Amount</string>
    <string name="save">SAVE</string>
    <string name="cancel">CANCEL</string>
    <string name="note_hint">Notes:</string>
</resources>
