<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/horizontal_page_margin"
                android:paddingRight="@dimen/horizontal_page_margin"
                android:layout_gravity="center_vertical"
                android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/title_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium">

            <EditText
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title_hint"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/amount_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title_input_layout"
            android:layout_marginTop="@dimen/margin_medium">

            <EditText
                android:id="@+id/amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/amount_hint"
                android:inputType="numberDecimal"/>
        </android.support.design.widget.TextInputLayout>



    <LinearLayout
        android:id="@+id/date_holder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_below="@+id/amount_input_layout"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/date_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/medium_text"
            android:text="@string/date_hint"/>

        <TextView
            android:id="@+id/date_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_small"
            android:layout_marginStart="@dimen/margin_small"
            android:textSize="@dimen/large_text"
            android:textColor="@color/accent"/>

    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/note_box_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/date_holder"
        android:layout_marginTop="@dimen/margin_large">

        <EditText
            android:id="@+id/notes"
            style="@style/NoteBox"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/cancel"/>

        <Button
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:text="@string/save"/>
</RelativeLayout>